[tool.poetry]
name = "hwweb5"
version = "0.1.0"
description = ""
authors = ["TimurVerba <135266210+TimurVerba@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
